--- a/prueba_izaskun.ipynb
+++ b/prueba_izaskun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "CARPETA_DATOS_LIMPIOS = 'Datos/Limpios/'\n",
-    "df= pd.read_csv(os.path.join(CARPETA_DATOS_LIMPIOS, 'DF_ADQUISICION.csv'))"
+    "df= pd.read_csv(os.path.join(CARPETA_DATOS_LIMPIOS, 'df_adquisicion.csv'))\n",
+    "df2= pd.read_csv(os.path.join(CARPETA_DATOS_LIMPIOS, 'df_valoracion.csv'))\n"
    ]
   },
   {
@@ -31,8 +32,7 @@
     {
      "data": {
       "text/plain": [
-       "Index(['startup', 'growth_stage', 'revenue_models', 'b2b_b2c', 'Nombre_sabi',\n",
-       "       'growth_stage.1', 'startup.1', 'Anos en Mercado',\n",
+       "Index(['b2b_b2c', 'Nombre_sabi', 'growth_stage', 'startup', 'Anos en Mercado',\n",
        "       'Cash flow mil EUR_2021', 'EBITDA mil EUR_2021',\n",
        "       'Inmovilizado mil EUR_2021', 'Fondos propios mil EUR_2021',\n",
        "       'Valor agregado mil EUR_2021', 'Total pasivo_ratio',\n",
@@ -54,6 +54,46 @@
    "source": [
     "df.columns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['startup', 'growth_stage', 'b2b_b2c', 'Nombre_sabi', 'valuation_2022',\n",
+       "       'Precio/Venta', 'Activo circulante mil EUR_2021',\n",
+       "       'Fondos propios mil EUR_2021', 'Total activo mil EUR_2021',\n",
+       "       'Total pasivo y capital propio mil EUR_2021',\n",
+       "       'Fondo de maniobra mil EUR_2021', 'Deudores mil EUR_2021',\n",
+       "       'Beneficio neto mil EUR', 'Ingresos de explotacion mil EUR_2021',\n",
+       "       'Importe neto Cifra de Ventas mil EUR_2021',\n",
+       "       'Pasivo liquido mil EUR_2021', 'Total pasivo_2021', 'total_funding',\n",
+       "       'Pasivo fijo mil EUR_2021', 'Gastos financieros mil EUR_2021',\n",
+       "       'Resultado Explotacion mil EUR_2021', 'EBIT mil EUR_2021', 'PER',\n",
+       "       'Resultado del Ejercicio mil EUR_2021',\n",
+       "       'Result. ordinarios antes Impuestos mil EUR_2021',\n",
+       "       'Importe neto Cifra de Ventas mil EUR_ratio'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
