aplicacion de Flask

--- a/prueba_izaskun.ipynb
+++ b/prueba_izaskun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,73 +26,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['b2b_b2c', 'Nombre_sabi', 'growth_stage', 'startup', 'Anos en Mercado',\n",
-       "       'Cash flow mil EUR_2021', 'EBITDA mil EUR_2021',\n",
-       "       'Inmovilizado mil EUR_2021', 'Fondos propios mil EUR_2021',\n",
-       "       'Valor agregado mil EUR_2021', 'Total pasivo_ratio',\n",
-       "       'Inmovilizado mil EUR_ratio', 'Capital suscrito mil EUR_2021',\n",
-       "       'Capital social mil EUR', 'Gastos financieros mil EUR_ratio',\n",
-       "       'Gastos de personal mil EUR_2021', 'Resultado financiero mil EUR_ratio',\n",
-       "       'Total pasivo y capital propio mil EUR_2021',\n",
-       "       'Total activo mil EUR_2021', 'Gastos financieros mil EUR_2021',\n",
-       "       'Pasivo fijo mil EUR_2021', 'total_funding',\n",
-       "       'Porcentaje_adquisicion_cat'],\n",
-       "      dtype='object')"
+       "['b2b_b2c',\n",
+       " 'Nombre_sabi',\n",
+       " 'growth_stage',\n",
+       " 'startup',\n",
+       " 'Anos en Mercado',\n",
+       " 'Cash flow mil EUR_2021',\n",
+       " 'EBITDA mil EUR_2021',\n",
+       " 'Inmovilizado mil EUR_2021',\n",
+       " 'Fondos propios mil EUR_2021',\n",
+       " 'Valor agregado mil EUR_2021',\n",
+       " 'Total pasivo_ratio',\n",
+       " 'Inmovilizado mil EUR_ratio',\n",
+       " 'Capital suscrito mil EUR_2021',\n",
+       " 'Capital social mil EUR',\n",
+       " 'Gastos financieros mil EUR_ratio',\n",
+       " 'Gastos de personal mil EUR_2021',\n",
+       " 'Resultado financiero mil EUR_ratio',\n",
+       " 'Total pasivo y capital propio mil EUR_2021',\n",
+       " 'Total activo mil EUR_2021',\n",
+       " 'Gastos financieros mil EUR_2021',\n",
+       " 'Pasivo fijo mil EUR_2021',\n",
+       " 'total_funding',\n",
+       " 'Porcentaje_adquisicion_cat']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.columns"
+    "list(df.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['startup', 'growth_stage', 'b2b_b2c', 'Nombre_sabi', 'valuation_2022',\n",
-       "       'Precio/Venta', 'Activo circulante mil EUR_2021',\n",
-       "       'Fondos propios mil EUR_2021', 'Total activo mil EUR_2021',\n",
-       "       'Total pasivo y capital propio mil EUR_2021',\n",
-       "       'Fondo de maniobra mil EUR_2021', 'Deudores mil EUR_2021',\n",
-       "       'Beneficio neto mil EUR', 'Ingresos de explotacion mil EUR_2021',\n",
-       "       'Importe neto Cifra de Ventas mil EUR_2021',\n",
-       "       'Pasivo liquido mil EUR_2021', 'Total pasivo_2021', 'total_funding',\n",
-       "       'Pasivo fijo mil EUR_2021', 'Gastos financieros mil EUR_2021',\n",
-       "       'Resultado Explotacion mil EUR_2021', 'EBIT mil EUR_2021', 'PER',\n",
-       "       'Resultado del Ejercicio mil EUR_2021',\n",
-       "       'Result. ordinarios antes Impuestos mil EUR_2021',\n",
-       "       'Importe neto Cifra de Ventas mil EUR_ratio'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df2.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "columnas_valoracion=list(df2.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['startup',\n",
+       " 'growth_stage',\n",
+       " 'b2b_b2c',\n",
+       " 'Nombre_sabi',\n",
+       " 'valuation_2022',\n",
+       " 'Precio/Venta',\n",
+       " 'Activo circulante mil EUR_2021',\n",
+       " 'Fondos propios mil EUR_2021',\n",
+       " 'Total activo mil EUR_2021',\n",
+       " 'Total pasivo y capital propio mil EUR_2021',\n",
+       " 'Fondo de maniobra mil EUR_2021',\n",
+       " 'Deudores mil EUR_2021',\n",
+       " 'Beneficio neto mil EUR',\n",
+       " 'Ingresos de explotacion mil EUR_2021',\n",
+       " 'Importe neto Cifra de Ventas mil EUR_2021',\n",
+       " 'Pasivo liquido mil EUR_2021',\n",
+       " 'Total pasivo_2021',\n",
+       " 'total_funding',\n",
+       " 'Pasivo fijo mil EUR_2021',\n",
+       " 'Gastos financieros mil EUR_2021',\n",
+       " 'Resultado Explotacion mil EUR_2021',\n",
+       " 'EBIT mil EUR_2021',\n",
+       " 'PER',\n",
+       " 'Resultado del Ejercicio mil EUR_2021',\n",
+       " 'Result. ordinarios antes Impuestos mil EUR_2021',\n",
+       " 'Importe neto Cifra de Ventas mil EUR_ratio']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columnas_valoracion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0      2.151838\n",
+      "1      2.151838\n",
+      "2      2.151838\n",
+      "3      2.151838\n",
+      "4      2.151838\n",
+      "         ...   \n",
+      "111    8.065771\n",
+      "112    8.065771\n",
+      "113    8.065771\n",
+      "114    9.211500\n",
+      "115    1.000000\n",
+      "Name: Importe neto Cifra de Ventas mil EUR_ratio, Length: 116, dtype: float64\n"
+     ]
+    }
+   ],
    "source": []
   }
  ],
