--- a/modelado_adquisicion.ipynb
+++ b/modelado_adquisicion.ipynb
@@ -13118,14 +13118,17 @@
     "if not os.path.exists('modelos/clasificacion'):\n",
     "    os.makedirs('modelos/clasificacion')\n",
     "\n",
+    "# regresion logistica\n",
+    "pickle.dump(lr, open('modelos/clasificacion/lr_model.pkl', 'wb'))\n",
+    "\n",
     "# se guarda el modelo de gradient boosting en la carpeta de modelos\n",
     "pickle.dump(gbc_missing, open('modelos/clasificacion/gbc_model.pkl', 'wb'))\n",
     "\n",
     "# se guarda el modelo de random forest\n",
-    "pickle.dump(rf_mejorado, open('modelos/clasificacion/rfc_model.pkl', 'wb'))\n",
+    "pickle.dump(rf, open('modelos/clasificacion/rf_model.pkl', 'wb'))\n",
     "\n",
     "# se guarda el modelo de catboost\n",
-    "pickle.dump(cbc, open('modelos/clasificacion/cbc_model.pkl', 'wb'))\n"
+    "pickle.dump(extra_tree, open('modelos/clasificacion/extra_tree.pkl', 'wb'))\n"
    ]
   }
  ],
