--- a/modelado_adquisicion.ipynb
+++ b/modelado_adquisicion.ipynb
@@ -13119,16 +13119,16 @@
     "    os.makedirs('modelos/clasificacion')\n",
     "\n",
     "# regresion logistica\n",
-    "pickle.dump(lr, open('modelos/clasificacion/lr_model.pkl', 'wb'))\n",
+    "pickle.dump(lr, open('modelos/clasificacion/lr_model.sav', 'wb'))\n",
     "\n",
     "# se guarda el modelo de gradient boosting en la carpeta de modelos\n",
-    "pickle.dump(gbc_missing, open('modelos/clasificacion/gbc_model.pkl', 'wb'))\n",
+    "pickle.dump(gbc_missing, open('modelos/clasificacion/gbc_model.sav', 'wb'))\n",
     "\n",
     "# se guarda el modelo de random forest\n",
-    "pickle.dump(rf, open('modelos/clasificacion/rf_model.pkl', 'wb'))\n",
+    "pickle.dump(rf, open('modelos/clasificacion/rf_model.sav', 'wb'))\n",
     "\n",
     "# se guarda el modelo de catboost\n",
-    "pickle.dump(extra_tree, open('modelos/clasificacion/extra_tree.pkl', 'wb'))\n"
+    "pickle.dump(extra_tree, open('modelos/clasificacion/extra_tree.sav', 'wb'))\n"
    ]
   }
  ],
