--- a/Flask/prueba_izaskun.ipynb
+++ b/Flask/prueba_izaskun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,16 +10,17 @@
     "import os\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n",
+    "import pickle as pkl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CARPETA_DATOS_LIMPIOS = 'Datos/Limpios/'\n",
+    "CARPETA_DATOS_LIMPIOS = '../Datos/Limpios/'\n",
     "df= pd.read_csv(os.path.join(CARPETA_DATOS_LIMPIOS, 'df_adquisicion.csv'))\n",
     "df2= pd.read_csv(os.path.join(CARPETA_DATOS_LIMPIOS, 'df_valoracion.csv'))\n"
    ]
@@ -68,11 +69,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['startup',\n",
+       " 'growth_stage',\n",
+       " 'b2b_b2c',\n",
+       " 'Nombre_sabi',\n",
+       " 'valuation_2022',\n",
+       " 'Precio/Venta',\n",
+       " 'Activo circulante mil EUR_2021',\n",
+       " 'Fondos propios mil EUR_2021',\n",
+       " 'Total activo mil EUR_2021',\n",
+       " 'Total pasivo y capital propio mil EUR_2021',\n",
+       " 'Fondo de maniobra mil EUR_2021',\n",
+       " 'Deudores mil EUR_2021',\n",
+       " 'Beneficio neto mil EUR',\n",
+       " 'Ingresos de explotacion mil EUR_2021',\n",
+       " 'Importe neto Cifra de Ventas mil EUR_2021',\n",
+       " 'Pasivo liquido mil EUR_2021',\n",
+       " 'Total pasivo_2021',\n",
+       " 'total_funding',\n",
+       " 'Pasivo fijo mil EUR_2021',\n",
+       " 'Gastos financieros mil EUR_2021',\n",
+       " 'Resultado Explotacion mil EUR_2021',\n",
+       " 'EBIT mil EUR_2021',\n",
+       " 'PER',\n",
+       " 'Resultado del Ejercicio mil EUR_2021',\n",
+       " 'Result. ordinarios antes Impuestos mil EUR_2021',\n",
+       " 'Importe neto Cifra de Ventas mil EUR_ratio']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "columnas_valoracion=list(df2.columns)"
+    "columnas_valoracion=list(df2.columns)\n",
+    "columnas_valoracion"
    ]
   },
   {
@@ -152,6 +190,16 @@
    "source": [
     "a='0'\n",
     "a=pd.astype('int64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CARPETA_MODELOS1 = \"../modelos/clasificacion\"\n",
+    "modelo_clasificacion = pkl.load(open(os.path.join(CARPETA_MODELOS1,\"rf_model.sav\"),\"rb\"))"
    ]
   },
   {
