--- a/modelado_valoracion.ipynb
+++ b/modelado_valoracion.ipynb
@@ -10448,27 +10448,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'x' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m br \u001b[39m=\u001b[39m BaggingRegressor(estimator\u001b[39m=\u001b[39mRandomForestRegressor(), n_estimators\u001b[39m=\u001b[39m\u001b[39m100\u001b[39m, random_state\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m br\u001b[39m.\u001b[39mfit(x,y)\n\u001b[0;32m      4\u001b[0m ab \u001b[39m=\u001b[39m AdaBoostRegressor(random_state\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[0;32m      5\u001b[0m ad\u001b[39m.\u001b[39mfit(x,y)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'x' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# se crean modelos con todos los datos\n",
+    "x= df.drop(columns=['valuation_2022'])\n",
+    "y= df['valuation_2022']\n",
+    "\n",
     "br = BaggingRegressor(estimator=RandomForestRegressor(), n_estimators=100, random_state=0)\n",
     "br.fit(x,y)\n",
     "\n",
     "ab = AdaBoostRegressor(random_state=0)\n",
-    "ad.fit(x,y)\n",
+    "ab.fit(x,y)\n",
     "\n",
     "gb = GradientBoostingRegressor(random_state=0)\n",
     "gb.fit(x,y)\n",
@@ -10482,7 +10474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10495,10 +10487,6 @@
     "if not os.path.exists('modelos/regresion'):\n",
     "    os.makedirs('modelos/regresion')\n",
     "\n",
-    "# se crean modelos con todos los datos\n",
-    "x= df.drop(columns=['valuation_2022'])\n",
-    "y= df['valuation_2022']\n",
-    "\n",
     "# se guarda el modelo de bagging  en la carpeta de modelos\n",
     "pickle.dump(br, open('modelos/regresion/br_model.pkl', 'wb'))\n",
     "\n",
@@ -10509,7 +10497,7 @@
     "pickle.dump(gb, open('modelos/regresion/gb_model.pkl', 'wb'))\n",
     "\n",
     "# se guarda el modelo de xgboost  en la carpeta de modelos\n",
-    "pickle.dump(xgb, open('modelos/regresion/gb_model.pkl', 'wb'))\n",
+    "pickle.dump(xgb, open('modelos/regresion/xgb_model.pkl', 'wb'))\n",
     "\n",
     "# se guarda el modelo de catboost  en la carpeta de modelos\n",
     "pickle.dump(cb, open('modelos/regresion/cb_model.pkl', 'wb'))"
