--- a/modelado_valoracion.ipynb
+++ b/modelado_valoracion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,48 +31,7 @@
     "from sklearn.metrics import r2_score\n",
     "import pickle\n",
     "\n",
-    "df= pd.read_csv('Datos/Limpios/df_valoracion.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['startup', 'growth_stage', 'b2b_b2c', 'Nombre_sabi', 'valuation_2022',\n",
-       "       'Precio/Venta', 'Activo circulante mil EUR_2021',\n",
-       "       'Fondos propios mil EUR_2021', 'Total activo mil EUR_2021',\n",
-       "       'Total pasivo y capital propio mil EUR_2021',\n",
-       "       'Fondo de maniobra mil EUR_2021', 'Deudores mil EUR_2021',\n",
-       "       'Beneficio neto mil EUR', 'Ingresos de explotacion mil EUR_2021',\n",
-       "       'Importe neto Cifra de Ventas mil EUR_2021',\n",
-       "       'Pasivo liquido mil EUR_2021', 'Total pasivo_2021', 'total_funding',\n",
-       "       'Pasivo fijo mil EUR_2021', 'Gastos financieros mil EUR_2021',\n",
-       "       'Resultado Explotacion mil EUR_2021', 'EBIT mil EUR_2021', 'PER',\n",
-       "       'Resultado del Ejercicio mil EUR_2021',\n",
-       "       'Result. ordinarios antes Impuestos mil EUR_2021',\n",
-       "       'Importe neto Cifra de Ventas mil EUR_ratio'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df= pd.read_csv('Datos/Limpios/df_valoracion.csv')\n",
     "#elimino la columna \"Precio/Venta\"\n",
     "df.drop(columns=['Precio/Venta'], inplace=True) \n",
     "df.drop(columns=['PER'], inplace=True) "
@@ -80,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,6 +49,14 @@
     "                                                    df['valuation_2022'], \n",
     "                                                    test_size=0.2, \n",
     "                                                    random_state=0)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------------------------"
    ]
   },
   {
@@ -10448,7 +10415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10462,8 +10429,8 @@
     "ab = AdaBoostRegressor(random_state=0)\n",
     "ab.fit(x,y)\n",
     "\n",
-    "gb = GradientBoostingRegressor(random_state=0)\n",
-    "gb.fit(x,y)\n",
+    "rf=RandomForestRegressor(random_state=42)\n",
+    "rf.fit(x,y)\n",
     "\n",
     "xgb = XGBRegressor(random_state=0)\n",
     "xgb.fit(x,y)\n",
@@ -10494,7 +10461,7 @@
     "pickle.dump(ab, open('modelos/regresion/ad_model.pkl', 'wb'))\n",
     "\n",
     "# se guarda el modelo de gradientboost  en la carpeta de modelos\n",
-    "pickle.dump(gb, open('modelos/regresion/gb_model.pkl', 'wb'))\n",
+    "pickle.dump(rf, open('modelos/regresion/rf_model.pkl', 'wb'))\n",
     "\n",
     "# se guarda el modelo de xgboost  en la carpeta de modelos\n",
     "pickle.dump(xgb, open('modelos/regresion/xgb_model.pkl', 'wb'))\n",
