--- a/Flask/prueba_izaskun.ipynb
+++ b/Flask/prueba_izaskun.ipynb
@@ -110,7 +110,7 @@
    ],
    "source": [
     "columnas_valoracion=list(df2.columns)\n",
-    "columnas_valoracion"
+    "len(columnas_valoracion)"
    ]
   },
   {
