--- a/modelado_adquisicion.ipynb
+++ b/modelado_adquisicion.ipynb
@@ -25,9 +25,18 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "\n",
-    "\n",
-    "\n"
+    "from sklearn.model_selection import train_test_split\n",
+    "from tpot import TPOTClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.ensemble import StackingClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from xgboost import XGBClassifier\n",
+    "from catboost import CatBoostClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "from skopt import BayesSearchCV\n",
+    "from skopt.space import Categorical, Integer\n"
    ]
   },
   {
@@ -296,7 +305,6 @@
    "source": [
     "# se dividen los datos en train y test\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(df.drop(columns=['Porcentaje_adquisicion_cat']), df['Porcentaje_adquisicion_cat'], test_size=0.1, random_state=42)\n"
    ]
@@ -344,7 +352,6 @@
    "source": [
     "# el primer modelo que se prueba es el automl de tpot\n",
     "\n",
-    "from tpot import TPOTClassifier\n",
     "\n",
     "tpot = TPOTClassifier(generations=5, population_size=50, verbosity=2, random_state=42, n_jobs=-1)\n",
     "tpot.fit(X_train, y_train)\n",
@@ -495,9 +502,6 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.ensemble import StackingClassifier\n",
-    "\n",
     "estimators = [    ('rf', RandomForestClassifier(random_state=0)),    ('log', LogisticRegression(max_iter=10000, random_state=0)),    ('knn', KNeighborsClassifier()),    ('dt', DecisionTreeClassifier(random_state=0)),    ('gnb', GaussianNB())]\n",
     "\n",
     "param_grid = {\n",
@@ -545,7 +549,6 @@
    ],
    "source": [
     "# bagging\n",
-    "from sklearn.ensemble import BaggingClassifier\n",
     "\n",
     "clf = BaggingClassifier(base_estimator=RandomForestClassifier(), n_estimators=10, random_state=0)\n",
     "\n",
@@ -572,7 +575,6 @@
    "source": [
     "# se hace un grid search para encontrar los mejores parametros para el modelo\n",
     "\n",
-    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "param_grid = {\n",
     "    'n_estimators': [10, 50, 100, 200, 500],\n",
@@ -675,8 +677,7 @@
    "source": [
     "# bayesion optimization\n",
     "\n",
-    "from skopt import BayesSearchCV\n",
-    "from skopt.space import Real, Categorical, Integer\n",
+    "\n",
     "\n",
     "opt = BayesSearchCV(\n",
     "    RandomForestClassifier(random_state=0),\n",
@@ -6802,10 +6803,6 @@
    "source": [
     "# se prueban modelos de boosting\n",
     "\n",
-    "from sklearn.ensemble import AdaBoostClassifier\n",
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "from xgboost import XGBClassifier\n",
-    "from catboost import CatBoostClassifier\n",
     "\n",
     "# se entrenan los modelos\n",
     "ada = AdaBoostClassifier()\n",
