--- a/Flask/prueba_izaskun.ipynb
+++ b/Flask/prueba_izaskun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columnas_valoracion=list(df2.columns)\n",
+    "len(columnas_valoracion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60, 26)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -80,10 +128,10 @@
        " 'b2b_b2c',\n",
        " 'Nombre_sabi',\n",
        " 'valuation_2022',\n",
+       " 'Total activo mil EUR_2021',\n",
        " 'Precio/Venta',\n",
        " 'Activo circulante mil EUR_2021',\n",
        " 'Fondos propios mil EUR_2021',\n",
-       " 'Total activo mil EUR_2021',\n",
        " 'Total pasivo y capital propio mil EUR_2021',\n",
        " 'Fondo de maniobra mil EUR_2021',\n",
        " 'Deudores mil EUR_2021',\n",
@@ -103,14 +151,14 @@
        " 'Importe neto Cifra de Ventas mil EUR_ratio']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "columnas_valoracion=list(df2.columns)\n",
-    "len(columnas_valoracion)"
+    "columnas_valoracion"
    ]
   },
   {
